<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat style="@style/Sample.Container">

        <com.xujiaao.android.firmata.sample.TipsView
            android:id="@+id/tips"
            style="@style/Sample.Tips" />

        <LinearLayout style="@style/Sample.Action.Container">

            <TextView
                style="@style/Sample.Sub.Title"
                android:text="@string/label_speed" />

            <SeekBar
                android:id="@+id/speed"
                style="@style/Sample.Sub.Content"
                android:progress="100" />
        </LinearLayout>

        <TextView
            android:id="@+id/action_forward"
            style="@style/Sample.Action.Text"
            android:text="@string/label_forward" />

        <TextView
            android:id="@+id/action_backward"
            style="@style/Sample.Action.Text"
            android:text="@string/label_backward" />

        <TextView
            android:id="@+id/action_stop"
            style="@style/Sample.Action.Text"
            android:text="@string/label_stop" />
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>